# draw3d

./: Cargo.toml  index.html
src/: app.rs  draw.rs  geometry.rs  lib.rs  main.rs  shader.wgsl  vertex.rs
