[package]
name = "draw3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "draw3d"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "draw3dbin"
path = "src/main.rs"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.19.3"
cfg-if = "1"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = [ "derive" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19.3", features = ["webgpu", "webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}